+fix jumping suggestion box

--- a/css/smart_template_styles.css
+++ b/css/smart_template_styles.css
@@ -29,6 +29,7 @@ div.p {
 #livesearch {
   font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
   line-height: 1.4;
+  position: fixed;
 }
 
 .no-indent div.p {
